# cvTransmitter

./: CMakeLists.txt  CaptureWindow.cpp  CaptureWindow.h  CompileOpenCV.mht  QRProcessor.cpp  QRProcessor.h  README.md  qr_show.cpp  screen_test.cpp  webcam_test.cpp
